# purpledrop

./: .gitignore  Cargo.toml  ChangeLog.md  HV_interface.sch  Makefile  PurpleDrop.kicad_pcb  PurpleDrop.pro  PurpleDrop.sch  README.md  build.rs  fp-info-cache  fp-lib-table  peripherals.sch  pi_interface.sch  power.sch  sym-lib-table
.cargo/: config
cartridge/: PD_cartridge_IO_NewConnectors-cache.lib  PD_cartridge_IO_NewConnectors.kicad_pcb  PD_cartridge_IO_NewConnectors.sch
config/: default.toml
devices/: Cargo.toml
devices/src/: hv507.rs  lib.rs  max31865.rs  mcp4725.rs  pca9685.rs  purpledrop.rs
footprints/: CUI_PJ-002AH.step  PDQE15-Q24-S5-D.stp
footprints/A03P12.pretty/: A01-20.STEP
footprints/SAMTEC_conn.pretty/: FTS-132-03-L-DV.stp  SAMTEC-FTS-132-03-X-DV.kicad_mod
footprints/logos.pretty/: misl-logo.kicad_mod
hardware/: ChangeLog.md  HV_interface.sch  MCU.sch  PurpleDrop.kicad_pcb  PurpleDrop.pro  PurpleDrop.sch  README.md  assembly-Bom.xlsx  bom.ini  peripherals.sch  power.sch  sym-lib-table
hardware/output/: PurpleDrop-top.pos  PurpleDrop_ScrubbedBOM.csv  PurpleDrop_rev6.2_bom.csv  PurpleDrop_rev6.3_bom.csv  PurpleDrop_rev6.4_bom.csv
hardware/symbols/: PD_symbols.dcm  (+2 more)
jsclient/: README.md  package-lock.json  package.json
purpledrop/: Cargo.toml
purpledrop/src/: board.rs  error.rs  httpserver.rs  lib.rs  mockpurpledrop.rs  purpledrop.rs  purpledrop_rpc.rs
purpledrop/src/devices/: hv507.rs  max31865.rs  mcp4725.rs  pca9685.rs
src/: board.rs  error.rs  lib.rs
symbols/: CUI.lib  PDQE15-Q24-S5-D.lib  PD_symbols.lib  RRE04EA6DFH.lib
(+28 files in other folders)
