[package]
name = "purpledrop"
version = "0.1.0"
authors = ["Max Willsey <me@mwillsey.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.5"
log = "0.4.6"
env_logger = "0.7"
futures = "0.1"
hyper-staticfile = "0.3.0"
signal-hook = "0.1.9"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8.9"
toml = "0.5"
jsonrpc-core = "14"
jsonrpc-derive = "14"
jsonrpc-http-server = "14"

[target.'cfg(target_arch = "arm")'.dependencies]
rppal = "0.11"

[build-dependencies]
chrono = "0.4"
